# bevy_web_file_drop

./: Cargo.toml  default.nix
.github/workflows/: ci.yml
example/src/: main.rs  plugin.rs
