[package]
name = "bevy_web_file_drop"
description = "Bevy plugin adding better support for drag and drop files in the web."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "3"
members = ["example"]

[workspace.package]
version = "0.3.0"
edition = "2024"
repository = "https://github.com/m11m/bevy_web_file_drop"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
js-sys = "0.3.94"
bevy = { default-features = false, version = "0.19" }
wasm-bindgen = "0.2.117"

[dependencies]
bevy_blob_loader = "0.4.0"
bevy = { workspace = true, features = ["3d_api"] }
js-sys.workspace = true
wasm-bindgen.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
